--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,10 @@
     "__tree": "cpp",
     "map": "cpp",
     "numeric": "cpp",
-    "memory_resource": "cpp"
+    "memory_resource": "cpp",
+    "version": "cpp",
+    "regex": "cpp",
+    "deque": "cpp"
   },
   "editor.formatOnSave": false
 }
