--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,47 @@
     "memory_resource": "cpp",
     "version": "cpp",
     "regex": "cpp",
-    "deque": "cpp"
+    "deque": "cpp",
+    "any": "cpp",
+    "barrier": "cpp",
+    "bit": "cpp",
+    "cfenv": "cpp",
+    "charconv": "cpp",
+    "cinttypes": "cpp",
+    "codecvt": "cpp",
+    "condition_variable": "cpp",
+    "csetjmp": "cpp",
+    "csignal": "cpp",
+    "coroutine": "cpp",
+    "forward_list": "cpp",
+    "fstream": "cpp",
+    "future": "cpp",
+    "iomanip": "cpp",
+    "latch": "cpp",
+    "list": "cpp",
+    "numbers": "cpp",
+    "queue": "cpp",
+    "ranges": "cpp",
+    "scoped_allocator": "cpp",
+    "semaphore": "cpp",
+    "set": "cpp",
+    "shared_mutex": "cpp",
+    "span": "cpp",
+    "stack": "cpp",
+    "thread": "cpp",
+    "typeindex": "cpp",
+    "unordered_set": "cpp",
+    "valarray": "cpp",
+    "*.tcc": "cpp",
+    "cuchar": "cpp",
+    "expected": "cpp",
+    "functional": "cpp",
+    "source_location": "cpp",
+    "utility": "cpp",
+    "spanstream": "cpp",
+    "stacktrace": "cpp",
+    "stop_token": "cpp",
+    "syncstream": "cpp"
   },
   "editor.formatOnSave": false
 }
