--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,7 +109,8 @@
     "spanstream": "cpp",
     "stacktrace": "cpp",
     "stop_token": "cpp",
-    "syncstream": "cpp"
+    "syncstream": "cpp",
+    "filesystem": "cpp"
   },
   "editor.formatOnSave": false
 }
